[package]
name = "learning-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "~0.7.0"
tower = "~0.4.13"
hyper = { version = "~1.0.1", features = ["full"] } 
tokio = { version = "~1.34.0", features = ["full"] }
serde = { version = "~1.0.193", features = ["derive"] }
serde_json = { version = "~1.0.108" }
